--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -1,19 +1,16 @@
 <!doctype html>
-{% load bootstrap4 %}
+{% load bootstrap5 %}
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Jekyll v4.1.1">
     <title>TASK MANAGER</title>
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/cover/">
 
     <!-- Bootstrap core CSS -->
     {% bootstrap_css %}
-    {% bootstrap_javascript jquery='full' %}
+    {% bootstrap_javascript %}
     <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -34,7 +31,7 @@
     {% load static %}
     <link href="{% static 'css/cover.css' %}" rel="stylesheet">
   </head>
-  <body class="text-center">
+  <body class="d-flex h-100 text-center text-white bg-dark">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="masthead mb-auto">
     <div class="inner">
