--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -1,11 +1,12 @@
 <!doctype html>
 {% load bootstrap5 %}
+{% load i18n %}
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <title>TASK MANAGER</title>
+    <title>{% trans "Task Manager" %}</title>
 
 
     <!-- Bootstrap core CSS -->
