--- a/task_manager/templates/index.html
+++ b/task_manager/templates/index.html
@@ -4,13 +4,12 @@
 
 {% block content %}
   <main role="main" class="inner cover">
-    <h1 class="cover-heading">BEHOLD!!</h1>
+    <h1 class="cover-heading">{% trans "Welcome!" %}</h1>
     <p class="lead">
-      Yet another TODO application that world had never seen before.<br>
-      You know what TO DO with it :)
+      {% trans "Simple and flexible task management web application" %}
     </p>
     <p class="lead">
-      <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+      <a href="#" class="btn btn-lg btn-secondary">{% trans "Learn more" %}</a>
     </p>
   </main>
 {% endblock %}
