--- a/task_manager/templates/navbar.html
+++ b/task_manager/templates/navbar.html
@@ -1,10 +1,10 @@
 {% load i18n %}
 
 <div class="inner">
-    <h3 class="masthead-brand">{%Task Manager</h3>
+    <h3 class="masthead-brand">{% trans "Task Manager" %}</h3>
     <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link active" href="#">Users</a>
-        <a class="nav-link" href="#">Log in</a>
-        <a class="nav-link" href="#">Sign up</a>
+        <a class="nav-link active" href="#">{% trans "Users" %}</a>
+        <a class="nav-link" href="#">{% trans "Log in" %}</a>
+        <a class="nav-link" href="#">{% trans "Sign up" %}</a>
     </nav>
 </div>
