--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <title>{% trans "Task Manager" %}</title>
+    <title>{% block title %}{% endblock %}</title>
 
 
     <!-- Bootstrap core CSS -->
@@ -32,17 +32,18 @@
     {% load static %}
     <link href="{% static 'css/cover.css' %}" rel="stylesheet">
   </head>
-  <body class="d-flex h-100 text-center text-white bg-dark">
+  <body class="d-flex h-200 text-white bg-dark">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="masthead mb-auto">
     {% include 'navbar.html' %}
   </header>
 
+      {% bootstrap_messages %}
       {% block content %}
       {% endblock %}
 
 
-  <footer class="mastfoot mt-auto">
+  <footer class="text-center mastfoot mt-auto">
      {% include 'footer.html' %}
   </footer>
 </div>
