--- a/task_manager/static/css/cover.css
+++ b/task_manager/static/css/cover.css
@@ -26,7 +26,7 @@ a:hover {
 
 html,
 body {
-  height: 100%;
+  min-height: 100%;
   background-color: #121212;
 }
 
@@ -39,7 +39,7 @@ body {
 }
 
 .cover-container {
-  max-width: 42em;
+  width: 100%;
 }
 
 
