--- a/task_manager/templates/navbar.html
+++ b/task_manager/templates/navbar.html
@@ -3,8 +3,8 @@
 <div class="inner">
     <h3 class="masthead-brand">{% trans "Task Manager" %}</h3>
     <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link active" href="#">{% trans "Users" %}</a>
-        <a class="nav-link" href="#">{% trans "Log in" %}</a>
-        <a class="nav-link" href="#">{% trans "Sign up" %}</a>
+        <a class="nav-link active" href="{% url 'user_index' %}">{% trans "Users" %}</a>
+        <a class="nav-link" href="{% url 'login' %}">{% trans "Log in" %}</a>
+        <a class="nav-link" href="{% url 'sign_up' %}">{% trans "Sign up" %}</a>
     </nav>
 </div>
