--- a/task_manager/static/css/cover.css
+++ b/task_manager/static/css/cover.css
@@ -26,7 +26,7 @@ a:hover {
 
 html,
 body {
-  min-height: 100%;
+  height: 100%;
   background-color: #121212;
 }
 
@@ -39,7 +39,7 @@ body {
 }
 
 .cover-container {
-  width: 100%;
+  max-width: 42em;
 }
 
 
