--- a/task_manager/templates/navbar.html
+++ b/task_manager/templates/navbar.html
@@ -1,10 +1,15 @@
 {% load i18n %}
 
 <div class="inner">
-    <h3 class="masthead-brand">{% trans "Task Manager" %}</h3>
+    <h3 class="masthead-brand"> <a href="{% url 'index' %}" style="text-decoration:none;">{% trans "Task Manager" %}</a></h3>
     <nav class="nav nav-masthead justify-content-center">
         <a class="nav-link active" href="{% url 'user_index' %}">{% trans "Users" %}</a>
-        <a class="nav-link" href="{% url 'login' %}">{% trans "Log in" %}</a>
-        <a class="nav-link" href="{% url 'sign_up' %}">{% trans "Sign up" %}</a>
+         {% if user.is_authenticated %}
+            <a class="nav-link" href="{% url 'logout' %}">{% trans "Log Out" %}</a>
+         {% else %}
+            <a class="nav-link" href="{% url 'login' %}">{% trans "Log In" %}</a>
+            <a class="nav-link" href="{% url 'sign_up' %}">{% trans "Sign Up" %}</a>
+         {% endif %}
+
     </nav>
 </div>
