--- a/task_manager/templates/users/index.html
+++ b/task_manager/templates/users/index.html
@@ -24,7 +24,7 @@
 	      <td>
 			<a class="btn btn-info btn-sm mr-2" href="{% url 'user_update' user.id %}">
 			{% translate 'Edit' %}</a>
-			<a class="btn btn-danger btn-sm" href="{% url 'user_index' %}">
+			<a class="btn btn-danger btn-sm" href="{% url 'user_delete' user.id %}">
 			{% translate 'Delete' %}</a>
 	      </td>
 	    </tr>
