--- a/task_manager/templates/navbar.html
+++ b/task_manager/templates/navbar.html
@@ -3,7 +3,7 @@
 <div class="inner">
     <h3 class="masthead-brand"> <a href="{% url 'index' %}" style="text-decoration:none;">{% trans "Task Manager" %}</a></h3>
     <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link active" href="{% url 'user_index' %}">{% trans "Users" %}</a>
+        <a class="nav-link active" href="{% url 'users_index' %}">{% trans "Users" %}</a>
          {% if user.is_authenticated %}
             <a class="nav-link" href="{% url 'logout' %}">{% trans "Log Out" %}</a>
          {% else %}
