--- a/task_manager/templates/navbar.html
+++ b/task_manager/templates/navbar.html
@@ -5,7 +5,9 @@
     <nav class="nav nav-masthead justify-content-center">
         <a class="nav-link active" href="{% url 'users_index' %}">{% trans "Users" %}</a>
          {% if user.is_authenticated %}
+            <a class="nav-link" href="{% url 'statuses_index' %}">{% trans "Statuses" %}</a>
             <a class="nav-link" href="{% url 'logout' %}">{% trans "Log Out" %}</a>
+
          {% else %}
             <a class="nav-link" href="{% url 'login' %}">{% trans "Log In" %}</a>
             <a class="nav-link" href="{% url 'sign_up' %}">{% trans "Sign Up" %}</a>
