--- a/task_manager/templates/navbar.html
+++ b/task_manager/templates/navbar.html
@@ -5,6 +5,7 @@
     <nav class="nav nav-masthead justify-content-center">
         <a class="nav-link active" href="{% url 'users_index' %}">{% trans "Users" %}</a>
          {% if user.is_authenticated %}
+            <a class="nav-link" href="{% url 'tasks_index' %}">{% trans "Tasks" %}</a>
             <a class="nav-link" href="{% url 'statuses_index' %}">{% trans "Statuses" %}</a>
             <a class="nav-link" href="{% url 'logout' %}">{% trans "Log Out" %}</a>
 
