--- a/task_manager/templates/navbar.html
+++ b/task_manager/templates/navbar.html
@@ -7,7 +7,7 @@
          {% if user.is_authenticated %}
             <a class="nav-link" href="{% url 'tasks_index' %}">{% trans "Tasks" %}</a>
             <a class="nav-link" href="{% url 'statuses_index' %}">{% trans "Statuses" %}</a>
-            <a class="nav-link" href="{% url 'logout' %}">{% trans "Log Out" %}</a>
+            <a class="nav-link" href="{% url 'logout' %}">{% trans "Logout" %}</a>
 
          {% else %}
             <a class="nav-link" href="{% url 'login' %}">{% trans "Log In" %}</a>
