--- a/task_manager/templates/tasks/show.html
+++ b/task_manager/templates/tasks/show.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="row p-1">
                       <div class="col">
-                        <h6>{% trans "labels" %}</h6>
+                        <h6>{% trans "Labels" %}</h6>
                         <ul>
                           {% comment %} {% for label in task.labels.all %}
                           <li>{{ label }}</li>
