small trans tag fix in templates

--- a/task_manager/templates/form.html
+++ b/task_manager/templates/form.html
@@ -4,7 +4,7 @@
 {% load i18n %}
 
 {% block title %}
-    {{ title }} | {% translate 'Task Manager' %}
+    {{ title }} | {% trans 'Task Manager' %}
 {% endblock %}
 
 {% block content %}
