--- a/task_manager/templates/tasks/show.html
+++ b/task_manager/templates/tasks/show.html
@@ -39,9 +39,9 @@
                       <div class="col">
                         <h6>{% trans "Labels" %}</h6>
                         <ul>
-                          {% comment %} {% for label in task.labels.all %}
+                          {% for label in task.labels.all %}
                           <li>{{ label }}</li>
-                          {% endfor %} {% endcomment %}
+                          {% endfor %}
                         </ul>
                       </div>
                     </div>
