--- a/task_manager/templates/statuses/index.html
+++ b/task_manager/templates/statuses/index.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block content %}
-	<h1 class="my-4 text-left"> {% translate 'Statuses' %} </h1>
+	<h1 class="my-4 text-left"> {% trans 'Statuses' %} </h1>
 	<a class="btn btn-info btn-sm mr-2" href="{% url 'status_create'%}">
 			{% trans 'Create status' %}</a>
     <table class="table text-white">
@@ -23,9 +23,9 @@
 			<td>{{ status.created_at }}</td>
 	      	<td>
 				<a class="btn btn-info btn-sm mr-2" href="{% url 'status_update' status.id %}">
-				{% translate 'Edit' %}</a>
+				{% trans 'Edit' %}</a>
 				<a class="btn btn-danger btn-sm" href="{% url 'status_delete' status.id %}">
-				{% translate 'Delete' %}</a>
+				{% trans 'Delete' %}</a>
 	      	</td>
 	    </tr>
 	    {% endfor %}
