--- a/task_manager/templates/tasks/index.html
+++ b/task_manager/templates/tasks/index.html
@@ -28,9 +28,9 @@
 			<td>{{ task.created_at }}</td>
 	      	<td>
 				<a class="btn btn-info btn-sm mr-2" href="{% url 'task_update' task.id %}">
-				{% translate 'Edit' %}</a>
+				{% trans 'Edit' %}</a>
 				<a class="btn btn-danger btn-sm" href="{% url 'task_delete' task.id %}">
-				{% translate 'Delete' %}</a>
+				{% trans 'Delete' %}</a>
 	      	</td>
 	    </tr>
 	    {% endfor %}
