--- a/task_manager/templates/users/index.html
+++ b/task_manager/templates/users/index.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block content %}
-	<h1 class="my-4 text-left"> {% translate 'Users' %} </h1>
+	<h1 class="my-4 text-left"> {% trans 'Users' %} </h1>
 
     <table class="table text-white">
 	  <thead class="thead-dark">
@@ -23,9 +23,9 @@
 	      <td>{{ user.date_joined }}</td>
 	      <td>
 			<a class="btn btn-info btn-sm mr-2" href="{% url 'user_update' user.id %}">
-			{% translate 'Edit' %}</a>
+			{% trans 'Edit' %}</a>
 			<a class="btn btn-danger btn-sm" href="{% url 'user_delete' user.id %}">
-			{% translate 'Delete' %}</a>
+			{% trans 'Delete' %}</a>
 	      </td>
 	    </tr>
 	    {% endfor %}
