--- a/task_manager/templates/tasks/show.html
+++ b/task_manager/templates/tasks/show.html
@@ -15,7 +15,7 @@
                 <div class="card-header bg-secondary text-white">
                   <h2>{{ task.name }}</h2>
                 </div>
-                <div class="card-body bg-light">
+                <div class="card-body bg-dark">
                   <p>{{ task.description }}</p>
                   <hr>
                   <div class="container">
