include using filter.html in tasks_index

--- a/task_manager/templates/tasks/index.html
+++ b/task_manager/templates/tasks/index.html
@@ -5,6 +5,8 @@
 	<h1 class="my-4 text-left"> {% trans 'Tasks' %} </h1>
 	<a class="btn btn-info btn-sm mr-2" href="{% url 'task_create'%}">
 			{% trans 'Create task' %}</a>
+
+{% include 'filter.html' %}
     <table class="table text-white">
 	  <thead class="thead-dark">
 	    <tr>
