--- a/task_manager/templates/statuses/delete.html
+++ b/task_manager/templates/statuses/delete.html
@@ -11,6 +11,6 @@
     <form method="post">
         <p>{% trans 'Are you sure you want to delete' %} {{ status.name }}?</p>
         {% csrf_token %}
-        {% bootstrap_button button_text button_type="submit" button_class="btn btn-danger" %}
+        {% bootstrap_button button_text button_type="submit" button_class="btn btn-danger delete-button" %}
     </form>
 {% endblock %}
