--- a/task_manager/templates/navbar.html
+++ b/task_manager/templates/navbar.html
@@ -3,11 +3,15 @@
 <div class="inner">
     <h3 class="masthead-brand"> <a href="{% url 'index' %}" style="text-decoration:none;">{% trans "Task Manager" %}</a></h3>
     <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link active" href="{% url 'users_index' %}">{% trans "Users" %}</a>
+        <a class="nav-link{% if request.resolver_match.view_name == 'users_index' %} active{% endif %}" 
+        href="{% url 'users_index' %}">{% trans "Users" %}</a>
          {% if user.is_authenticated %}
-            <a class="nav-link" href="{% url 'tasks_index' %}">{% trans "Tasks" %}</a>
-            <a class="nav-link" href="{% url 'statuses_index' %}">{% trans "Statuses" %}</a>
-            <a class="nav-link" href="{% url 'labels_index' %}">{% trans "Labels" %}</a>
+            <a class="nav-link{% if request.resolver_match.view_name == 'tasks_index' %} active{% endif %}" 
+            href="{% url 'tasks_index' %}">{% trans "Tasks" %}</a>
+            <a class="nav-link{% if request.resolver_match.view_name == 'statuses_index' %} active{% endif %}" 
+            href="{% url 'statuses_index' %}">{% trans "Statuses" %}</a>
+            <a class="nav-link{% if request.resolver_match.view_name == 'labels_index' %} active{% endif %}" 
+            href="{% url 'labels_index' %}">{% trans "Labels" %}</a>
             <a class="nav-link" href="{% url 'logout' %}">{% trans "Logout" %}</a>
 
          {% else %}
