--- a/task_manager/templates/labels/index.html
+++ b/task_manager/templates/labels/index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 	<h1 class="my-4 text-left"> {% trans 'Labels' %} </h1>
-	<a class="btn btn-info btn-sm mr-2" href="{% url 'label_create'%}">
+	<a class="btn btn-info btn-sm mr-2 create-button" href="{% url 'label_create'%}">
 			{% trans 'Create label' %}</a>
     <table class="table text-white">
 	  <thead class="thead-dark">
