--- a/task_manager/templates/statuses/index.html
+++ b/task_manager/templates/statuses/index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 	<h1 class="my-4 text-left"> {% trans 'Statuses' %} </h1>
-	<a class="btn btn-info btn-sm mr-2" href="{% url 'status_create'%}">
+	<a class="btn btn-info btn-sm mr-2 create-button" href="{% url 'status_create'%}">
 			{% trans 'Create status' %}</a>
     <table class="table text-white">
 	  <thead class="thead-dark">
