--- a/task_manager/templates/tasks/show.html
+++ b/task_manager/templates/tasks/show.html
@@ -24,8 +24,8 @@
                       <div class="col">{{ task.author }}</div>
                     </div>
                     <div class="row p-1">
-                      <div class="col">{% trans "Assignee" %}</div>
-                      <div class="col">{{ task.assignee }}</div>
+                      <div class="col">{% trans "Executor" %}</div>
+                      <div class="col">{{ task.executor }}</div>
                     </div>
                     <div class="row p-1">
                       <div class="col">{% trans "Status" %}</div>
